Changed main icon, added new icons for the interaction with lists.

--- a/gui/SAH.qrc
+++ b/gui/SAH.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/">
-		<file>icons/halloween250.ico</file>
+		<file>icons/Add.png</file>
+		<file>icons/Cocktail.png</file>
+		<file>icons/Delete.png</file>
+		<file>icons/Remove.png</file>
     </qresource>
 </RCC>
